--- a/form.html
+++ b/form.html
@@ -39,7 +39,7 @@
 
                 <div>
                     <div class="flex items-center justify-between">
-                        <label for="password" class="block text-sm/6 font-medium text-white">Password</label>
+                        <label for="password" class="block text-sm/6 font-medium text-white">passward</label>
                         <div class="text-sm">
                             <a href="#" class="font-semibold text-indigo-600 hover:"
                                 style="text-decoration: none;color: green;">Forgot password?</a>
@@ -63,8 +63,8 @@
             </p>
         </div>
     </div>
-
-
+       
+   
 </body>
 
 </html>
