--- a/wifi.html
+++ b/wifi.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Okasha Smart</title>
   <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -13,16 +13,16 @@
 
 <body>
   <!-- Top Notification Bar -->
-  <div class="top-bar">
-   <a href="./products.html"> <span class="promo-text" >Make Your Life Smart With Okasha!</span></a>
+   <div class="top-bar">
+   <a href="./home.html"> <span class="promo-text" >Make Your Life Smart With Okasha!</span></a>
   </div>
 
   <!-- Contact + Icons Bar (optional placement) -->
   <div class="contact-bar">
     <div class="contact-info" style="background:rgb(133,103,166) ;">
-      <span>✉ info@okashasmart.com</span>
-      <span>📞 03 100 475 222</span>
-      <span>📞 03 020 444 888</span>
+      <span> info@okashasmart.com</span>
+      <span> 03 100 475 222</span>
+      <span> 03 020 444 888</span>
     </div>
     <div class="social-icons" style="background-color:rgb(133,103,166)  ;">
       <a href="#"><img src="./images/facebook.png" alt="Facebook"
@@ -42,14 +42,12 @@
 
   <!-- Search + Logo + Action Icons -->
   <header class="main-header">
-   <a href="./index.html"> <img src="./images/OKASHA-LOGO-.webp" alt="OKASHA logo" class="logo"></a>
+   <a href="./home.html"> <img src="./images/OKASHA-LOGO-.webp" alt="OKASHA logo" class="logo"></a>
     <div class="search-box">
       <input type="text" placeholder="Search For Product , Brand or Key word">
-      <button class="search-button"><img src="./images/search (1).png" alt="search"></button>
+      <button class="search-button"><img src="./images/search (1).png" alt="search" style="margin-right: 20px;"></button>
     </div>
     <div class="header-actions">
-      <button class="icon-btn"> <img src="./images/user.png" alt="">👤</button>
-      <button class="icon-btn">❤️</button>
       <button class=" icon-btn">🛒</button>
     </div>
   </header>
@@ -174,9 +172,7 @@
             <a href="#" style="background-color: white;color: black;">Non Wifi Products</a>
           </div>
           <!--yaha khatam howa-->
-      <li class="menu-item">
-        <a href="./products.html">All Products</a>
-    </ul>
+     
   </nav>
 
 
@@ -185,7 +181,7 @@
   <div class="header1">
     <h1>Collection</h1>
     <div class="breadcrumbs1">
-      <a href="./index.html">Home</a> / <a href="./wifi.html">Wifi Products</a>
+      <a href="./home.html">Home</a> / <a href="./wifi.html">Wifi Products</a>
     </div>
   </div>
 
@@ -287,9 +283,9 @@
       <h2>Sign Up Our News Letter</h2>
       <p>Join our mail list and get offers</p>
     </div>
-    <form class="newsletter-form" onsubmit="event.preventDefault()">
-      <input type="email" placeholder="Your Email here" required />
-      <button class="button1">Subscribe</button>
+    <form class="newsletter-form">
+      <input type="email" placeholder="Your Email here" style="border-radius: 20px;" />
+      <button class="button1"  style="border-radius: 20px;">Subscribe</button>
     </form>
   </div>
   
